environment vars compliant

--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -9,7 +9,8 @@ RUN rm -r pyproxy/monitoring
 RUN rm pyproxy/modules/custom_header.py
 RUN rm pyproxy/modules/shortcuts.py
 
-RUN chmod -R 777 /app/config
+RUN mkdir -p logs
+RUN chown -R 1000:1000 /app
 
 
 FROM gcr.io/distroless/python3-debian12:nonroot
